--- a/Analysis/all_x_single-y-box.Rmd
+++ b/Analysis/all_x_single-y-box.Rmd
@@ -8,10 +8,10 @@ output: word_document
 options(timeout=2000);
 library('gdata')
 source("/var/www/R/config.local.private");
-source(paste(fxn_locations,"query_elf_statistics.R", sep = "/")); 
+source(paste(base_directory,"Analysis/query_elf_statistics.R", sep = "/")); 
 
 
-plot_monthly <- function (data, subname = 'all', metric = "out_rsq_adj") {
+plot_monthly <- function (data, subname = 'all', metric = "out_rsq_adj", ymin = 0.5, ymax = 1.0) {
   # dataset_tag: bpj-530, bpj-rcc
   data.da <- subset(data, in_xvar == 'nhdp_drainage_sqmi');
   data.mean <- subset(data, in_xvar == 'erom_q0001e_mean');
@@ -28,7 +28,7 @@ plot_monthly <- function (data, subname = 'all', metric = "out_rsq_adj") {
   data.nov <- subset(data, in_xvar == 'erom_q0001e_nov');
   data.dec <- subset(data, in_xvar == 'erom_q0001e_dec');
   n = c('DA', 'Mean', 'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December')
-  title <- paste(ftype, " Q=", 100.*(1.0 - quantile), subname, "% for \n", metric, " = f(DA), Qmean,.., Qdec");
+  title <- paste(ftype, " Q=", 100.*(1.0 - quantile), "%", subname, "for \n", metric, " = f(DA), Qmean,.., Qdec");
   if (length(data.da$s_adminid) > 1) {
     ns <- cbind(
        'DA' = length(data.da[,metric]), 
@@ -51,7 +51,8 @@ plot_monthly <- function (data, subname = 'all', metric = "out_rsq_adj") {
         data.apr[,metric], data.may[,metric], data.jun[,metric], data.jul[,metric], data.aug[,metric], 
         data.sep[,metric], data.oct[,metric], data.nov[,metric], data.dec[,metric],
       names = n, 
-      main = title
+      main = title,
+      ylim = c(ymin, ymax)
     );
     
     # this is an example of labelling the bars with the n's
@@ -73,16 +74,17 @@ plot_monthly <- function (data, subname = 'all', metric = "out_rsq_adj") {
 }
 
 
-bundle <- 'watershed'; # ecoregion, landunit
-ftype <- 'nhd_huc8'; # ecoregion_iii
-metric <- 'aqbio_nt_benins'; # aqbio_nt_total, aqbio_nt_cent, aqbio_nt_darter, aqbio_nt_benins
+bundle <- 'ecoregion'; # ecoregion, landunit, watershed
+ftype <- 'ecoregion_iii'; # ecoregion_iii, nhd_huc6, nhd_huc6=8, nhd_huc10
+metric <- 'aqbio_nt_total'; # aqbio_nt_total, aqbio_nt_cent, aqbio_nt_darter, aqbio_nt_benins
 q_ftype <- "fe_quantreg";
+dataset_tag = 'bpj-530'; # bpj-530, bpj-rcc, 'HUC8_quantregwHuc6bp' (huc 6)
 analysis_timespan = "full";
 sampres = "species";
 selected <- 'all'; # all or hydrocode
 quantile <- 0.8;
-pmax = 0.1;
-Rmin = 0.5;
+pmax = 0.01;
+Rmin = 0.25;
 stat_quantreg_glo <- 0; 
 stat_quantreg_ghi <- 530; 
 # ftype = fe_quantreg, fe_quantreg_pwit, fe_quantreg_ymax, fe_twopoint
@@ -97,9 +99,9 @@ rawdata = fn_dh_elfstats (
     sampres = sampres, # e.g. species, e.
     stat_quantreg_qu = quantile, # upper quantile to use
     feature_ftype = ftype,
-    stat_quantreg_ghi = stat_quantreg_ghi, #
-    stat_quantreg_glo = stat_quantreg_glo, # use 1 for pwit, 0 for quantreg
-    dataset_tag = 'bpj-530'
+    #stat_quantreg_ghi = stat_quantreg_ghi, #
+    #stat_quantreg_glo = stat_quantreg_glo, # use 1 for pwit, 0 for quantreg
+    dataset_tag = dataset_tag
 );
 
 
@@ -128,8 +130,11 @@ data = subset(data, out_p < pmax); #
 data = subset(data, out_rsq_adj > Rmin)
 #data = subset(data, isheadwater > 0)
 # render it
-plot_monthly(data, '( p<0.01, R>0 )', metric = 'out_rsq_adj');
-plot_monthly(data, '( p<0.01, R>0 )', metric = 'out_m');
+ymin = 0.0; # restrain plot
+labeltext = paste('( p<', pmax, 'R>', Rmin,' )',sep='')
+plot_monthly(data, labeltext, metric = 'out_rsq_adj', ymin=ymin);
+mmax = ceiling(max(data$out_m))
+plot_monthly(data, labeltext, metric = 'out_m', ymin=0, ymax=mmax);
 
 # filter our data?
 data = rawdata; # make a copy to start so we can compare raw to filtered if desired
@@ -138,7 +143,8 @@ data = rawdata; # make a copy to start so we can compare raw to filtered if desi
 data = subset(data, out_p < pmax); # 
 data = subset(data, out_rsq_adj > Rmin)
 data = subset(data, isheadwater > 0)
-plot_monthly(data, '( headwaters, p<0.01, R>0 )');
+labeltext = paste('( headwaters, p<', pmax, 'R>', Rmin,' )',sep='')
+plot_monthly(data,labeltext, ymin=ymin);
 
 ```
 * Location: `r selected`
