--- a/Analysis/elf_spatial_trends.Rmd
+++ b/Analysis/elf_spatial_trends.Rmd
@@ -8,18 +8,21 @@ output: word_document
 options(timeout=1024);
 library('gdata')
 source("/var/www/R/config.local.private");
-source(paste(fxn_locations,"query_elf_statistics.R", sep = "/"));
+source(paste(base_directory,"Analysis/query_elf_statistics.R", sep = "/")); 
 save_directory = paste(file_directory,"/",sep='');
 
 # vars
 yvar = 'aqbio_nt_total';#aqbio_nt_total, aqbio_nt_cent, aqbio_nt_darter, aqbio_nt_benins
 quant = 0.8
 # Get the BPJ auto-determined PWIT left side regression
+# HUC8_quantregwHuc6bp
+# Huc6 customGhiGlo
 huc6_rawdata = 
-  fn_dh_elfstats ( ftype = 'fe_quantreg_pwit', analysis_timespan = "full", yvar = yvar,
+  fn_dh_elfstats ( ftype = 'fe_quantreg', analysis_timespan = "full", yvar = yvar,
   sampres = "species", stat_quantreg_qu = quant, feature_ftype = 'nhd_huc6', stat_quantreg_ghi = 'all', 
-  stat_quantreg_glo = 'all', dataset_tag = 'Huc6 customGhiGlo'
+  stat_quantreg_glo = 'all', dataset_tag = 'bpj-530'
 );
+
 huc6_qmean_data = huc6_rawdata;
 huc6_qmean_data = subset(huc6_qmean_data, in_xvar == 'erom_q0001e_mean')
 huc6_qmean_data = subset(huc6_qmean_data, out_m > 0)
